@@ -7,6 +7,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class CorsConfig {
@@ -15,31 +16,44 @@ public class CorsConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         
-        // USAR allowedOriginPatterns en lugar de allowedOrigins con credentials=true
-        configuration.setAllowedOriginPatterns(Arrays.asList("*"));
+        // IMPORTANTE: Permitir todos los orígenes para desarrollo móvil
+        // En producción, especifica las IPs exactas de tus dispositivos
+        configuration.setAllowedOriginPatterns(List.of("*"));
         
-        // Métodos HTTP permitidos
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        // Métodos HTTP permitidos - TODOS los necesarios para la app móvil
+        configuration.setAllowedMethods(Arrays.asList(
+            "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH", "HEAD"
+        ));
         
-        // Headers permitidos
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        // Headers permitidos - TODOS los headers
+        configuration.setAllowedHeaders(List.of("*"));
         
-        // Permitir cookies/credentials
+        // CRÍTICO: Permitir cookies/credentials para autenticación JWT
         configuration.setAllowCredentials(true);
         
-        // Configurar headers expuestos
+        // Headers expuestos para que el cliente móvil pueda leerlos
         configuration.setExposedHeaders(Arrays.asList(
             "Access-Control-Allow-Origin",
             "Access-Control-Allow-Credentials",
             "Authorization",
-            "Content-Type"
+            "Content-Type",
+            "Content-Length",
+            "X-Requested-With",
+            "Accept",
+            "Origin",
+            "Cache-Control",
+            "Pragma"
         ));
         
-        // Tiempo de cache para requests preflight
-        configuration.setMaxAge(3600L);
+        // IMPORTANTE: Aumentar el tiempo de cache para requests preflight
+        // Esto reduce la cantidad de requests OPTIONS innecesarios
+        configuration.setMaxAge(3600L); // 1 hora
         
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        
+        // Aplicar configuración CORS a TODAS las rutas
         source.registerCorsConfiguration("/**", configuration);
+        
         return source;
     }
 }
